syntax = "proto3";

option csharp_namespace = "DeliveryService.Backend.Kitchen.Grpc";

package greet;

service KitchenBackend {
  rpc PrepareMealStart (HelloRequest) returns (HelloReply);
  rpc PrepareMealExecute (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
